# ai-glasses-seller-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260610_0001_initial_schema.py
app/: __init__.py  config.py  main.py
app/bot/: __init__.py  dependencies.py  formatting.py
app/bot/handlers/: __init__.py  catalog.py  consultation.py  faq.py  order.py  search.py  start.py  text.py  voice.py
app/bot/keyboards/: __init__.py  consultation.py  main.py
app/bot/middlewares/: __init__.py  logging.py
app/bot/states/: __init__.py  consultation.py  order.py
app/database/: __init__.py  session.py
app/database/models/: __init__.py  order.py  product.py
app/database/repositories/: __init__.py  order_repository.py  product_repository.py
app/datasets/: __init__.py  dialogues.txt  generate_synthetic.py  import_products.py  intents.csv  ner_dataset.json  normalization.py  products.csv  synthetic_products.csv
app/nlp/: __init__.py  entity_extractor.py  intent_classifier.py  ml_intent_classifier.py
app/services/: __init__.py  consultation_service.py  conversation_service.py  dialogue_service.py  llm_service.py  nlp_service.py  order_service.py  product_service.py  voice_service.py
glasses_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/unit/: test_consultation_service.py  test_conversation_service.py  test_dialogue_service.py  test_formatting.py  test_llm_service.py  test_nlp.py  test_normalization.py  test_order_service.py  test_voice_service.py
