[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glasses-bot"
version = "0.1.0"
description = "Intelligent Telegram bot for selling sunglasses with rule-based NLP"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiogram>=3.13,<4",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "scikit-learn>=1.5,<2",
    "sqlalchemy>=2.0,<3",
    "spacy>=3.8,<4",
    "vosk>=0.3.45,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
